Fix z-index on bg wrapper

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1291,6 +1291,8 @@ ul li {
     width: 100%;
     height: 100%;
   }
+
+  transition: color 0.2s, top 0.2s, left 0.2s;
 }
 
 svg {
@@ -1429,6 +1431,7 @@ svg {
   }
 
   .background-wrapper {
+    z-index: -20;
     position:fixed;
     width: calc(100% + 50px);
     height: calc(100% + 50px);
